--- a/PEA_P2.vcxproj
+++ b/PEA_P2.vcxproj
@@ -141,6 +141,9 @@
     <ClInclude Include="Time.hpp" />
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="tsp20.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
