--- a/PEA_P2.vcxproj
+++ b/PEA_P2.vcxproj
@@ -142,6 +142,9 @@
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="ftv170.txt" />
+    <Text Include="ftv55.txt" />
+    <Text Include="rbg358.txt" />
     <Text Include="tsp20.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
