--- a/PEA_P2.vcxproj.filters
+++ b/PEA_P2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Time.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tinyxml2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.hpp">
@@ -50,6 +53,9 @@
     <ClInclude Include="Time.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tinyxml2.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="tsp20.txt">
@@ -64,5 +70,16 @@
     <Text Include="rbg358.txt">
       <Filter>Resource Files</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="ftv35.xml">
+      <Filter>Resource Files</Filter>
+    </Xml>
+    <Xml Include="ftv55.xml">
+      <Filter>Resource Files</Filter>
+    </Xml>
+    <Xml Include="ftv170.xml">
+      <Filter>Resource Files</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
